modified:   .gitignore 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション3.ipynb
+++ b/セクション3.ipynb
@@ -248,12 +248,18 @@
     "# テーブルの作成をします。\n",
     "# 今回はCSVに一致した「jinko_table」Sparkテーブルを作成します\n",
     "# 定義はMysqlに格納されています（次のセクションで確認を行います）\n",
+    "\n",
     "spark.sql(\"\"\" \n",
     "CREATE TABLE IF NOT EXISTS data_management_cruch_course.jinko_table (code String, gengo String,wareki String,seireki String,chu String,sokei String,jinko_male String,jinko_femail String)\n",
     "PARTITIONED BY (kenmei String)\n",
     "STORED AS PARQUET\n",
-    "LOCATION '/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/parquet/';\n",
-    "\"\"\")\n"
+    "LOCATION '/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/data_management_cruch_course.db/jinko_table';\n",
+    "\"\"\")\n",
+    "\n",
+    "# locationとは実データが保存される領域です。\n",
+    "# locationは一般に\n",
+    "# DB.db/テーブル名\n",
+    "# となることが多いです。\n"
    ]
   },
   {
@@ -279,9 +285,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# テーブルにデータを登録します\n",
     "# insertIntoというメソッドがありますが使いづらいのでテンポラリテーブルを作成してそこからselect insert します\n",
@@ -292,7 +314,7 @@
     "#https://www.udemy.com/course/python-spark-pyspark/?referralCode=E67BF8B61F65866794EB\n",
     "#より、パーティションとリパーティションをつけることを忘れずに\n",
     "spark.sql(\"\"\" \n",
-    "Insert into table data_management_cruch_course.jinko_table partition(kenmei)\n",
+    "Insert overwrite table data_management_cruch_course.jinko_table partition(kenmei)\n",
     "/** REPARTITION(1) */\n",
     "Select \n",
     "code,gengo,wareki,seireki,chu,sokei,jinko_male,jinko_female,kenmei\n",
@@ -302,42 +324,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+--------+\n",
-      "|  kenmei|count(1)|\n",
-      "+--------+--------+\n",
-      "|神奈川県|     120|\n",
-      "|  大阪府|     120|\n",
-      "|    全国|     120|\n",
-      "|  愛知県|     120|\n",
-      "|  東京都|     120|\n",
-      "|  千葉県|     120|\n",
-      "|  埼玉県|     120|\n",
-      "|  兵庫県|     120|\n",
-      "|  静岡県|     120|\n",
-      "|  北海道|     120|\n",
-      "|  福岡県|     120|\n",
-      "|  京都府|     120|\n",
-      "|  広島県|     120|\n",
-      "|  岐阜県|     120|\n",
-      "|  宮城県|     120|\n",
-      "|  茨城県|     120|\n",
-      "|  栃木県|     120|\n",
-      "|  新潟県|     120|\n",
-      "|  群馬県|     120|\n",
-      "|  長野県|     120|\n",
-      "+--------+--------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# データがしっかり入っているか確認してみましょう\n",
     "spark.sql(\"\"\"\n",
