--- a/セクション4.ipynb
+++ b/セクション4.ipynb
@@ -16,30 +16,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ビジネスメタデータの重要な役割\n",
+    "# ビジネスメタデータとは？\n",
+    "ビジネスメタデータの"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 代表的なビジネスメタデータは？\n",
+    "代表的なビジネスメタデータはテーブル定義です。  \n",
+    "テーブル定義といっても、テーブル名やデータベース名、カラム名と言ったオーソドックスなところから、  \n",
+    "各カラムの説明といったビジネス要件などの説明を含みます。  \n",
     "\n",
-    "データマネジメントとは、"
+    "ビジネス要件（ドメイン知識などともよばれる）は社内の慣例や業界の慣例、システムの特別な仕様など、見ただけではわからないような仕様のことを指しています。  \n",
+    "特にビジネス要件は機械的には抽出することができず人の手に頼っているのが実情です。  \n",
+    "\n",
+    "そのため、ビジネスメタデータは単純にテーブル定義だけを示せば良いわけではなく単一システムだけにとどまらない、テーブル同士やシステム同士の紐付きを言語化し登録する必要もあるというわけになります（リネージュと呼んだりします）。  \n",
+    "\n",
+    "そのため現場のエンジニアだけで作業が完了する問いことはまずなく、データ提供〜データ分析に参画する全てのユーザがこのビジネスメタデータに参画する必要があります。  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ビジネスメタデータの活用方法\n"
+    "# ビジネスメタデータの重要性や活用方法\n",
+    "ビジネスメタデータは、従来から存在しているテーブル定義に対してより付加価値をつけていくものと言えるわけなのですが、\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 代表的なビジネスメタデータは？"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 実際にビジネスメタデータを覗いてみよう"
+    "# 実際にビジネスメタデータを覗いてみよう\n",
+    "ここからは実際にビジネスメタデータ(テーブル定義)を覗いてみましょう。\n",
+    "\n",
+    "復習になりますが、メタデータはメタデータストア(今回だとMysqlに保存していきます。)\n",
+    "特にテーブル定義はいづれの環境（オンプレでも、クラウドでも）自動的に保存されることが多いので、最初に確認するにはちょうどいい題材です。\n",
+    "\n",
+    "セクション２で行った環境構築設定などありますので、接続情報など忘れてしまった方は、以下のノートブックを見直してみてください。\n",
+    "```\n",
+    "必要ツールの設定を行います。\n",
+    "以下を参照いただきご自身の環境作成をおこないます\n",
+    "https://github.com/yk-st/pyspark_settings/blob/main/setting.ipynb\n",
+    "```\n",
+    "\n",
+    "## Mysqlに接続してみよう\n",
+    "1. mysql -uroot -proot でデータベースに接続\n",
+    "2. use metastore　でmetastoreデータベースに接続\n",
+    "3. show tablesでテーブル一覧を表示\n",
+    "4. select * from TBL でメタデータストア内に保存されているテーブルを取得\n",
+    "\n",
+    "jinko_table\n",
+    "sample_metadataテーブル共にセクション３で作成したSparkテーブルです。\n",
+    "\n",
+    "5. select * from DBSでデータベース情報を確認してみましょう\n",
+    "\n",
+    "DB_IDが4で取得した値と一致していることが確認できるはずです\n",
+    "\n",
+    "6. 肝心の定義はどこにあるでしょうか？\n",
+    "SD_IDをもとにテーブル定義を引っ張ってきています。\n",
+    "少し説明しにくいのでSQLを見て下さい。\n",
+    "以下のSQLを実行するとsmaple_metadataテーブルのカラム名をメタデータストアから取得するSQLです。\n",
+    "\n",
+    "```\n",
+    "select co.COLUMN_NAME from TBLS t \n",
+    "   inner join SDS as s on t.SD_ID=s.SD_ID \n",
+    "   inner join CDS c on s.CD_ID=c.CD_ID \n",
+    "   inner join COLUMNS_V2 co on c.CD_ID = co.CD_ID \n",
+    "where TBL_NAME='sample_metadata';\n",
+    "```\n",
+    "\n",
+    "Mysqlで構築する場合特有の話になってしまうのであまり踏み込みませんが、全てのSPARKテーブルに関する情報は全て上記のようにJOINをすることによって取得することが可能です。  \n",
+    "じつ業務で活用する場合は、上記に加えてカラムの説明を保存するテーブルを作成(今回の場合はsample_metadataテーブル)して結合することで統合的にGUIやAPIで表示返却する  \n",
+    "ということが行われます。  "
    ]
   },
   {
@@ -104,29 +155,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# メタデータ保存用のSparkテーブル\n",
-    "spark.sql(\"create database if not exists metadata_tmp\")\n",
-    "spark.sql(\"\"\" \n",
-    "CREATE TABLE IF NOT EXISTS metadata_tmp.sample_metadata (database_name String, table_name String,table_definition String,sammary String,row_num String,selectivity String,consistency_flag String,frequency_access String)\n",
-    "PARTITIONED BY (kenmei String)\n",
-    "STORED AS PARQUET\n",
-    "LOCATION '/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/parquet/';\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#　テーブルができたか確認します\n",
-    "spark.sql(\"show tables in metadata_tmp\").show() "
+    "ここからはメタデータ保存用のSparkテーブルを作成していきます"
    ]
   },
   {
@@ -138,6 +171,42 @@
     "# コンソールで設定したSparkとNoteBookを接続します(動かす前に毎度実行する必要があります)\n",
     "import findspark\n",
     "findspark.init()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# メタデータ保存用のSparkテーブル\n",
+    "spark.sql(\"create database if not exists metadata_tmp\")\n",
+    "spark.sql(\"\"\" \n",
+    "CREATE TABLE IF NOT EXISTS metadata_tmp.sample_metadata (database_name String, table_name String,table_definition String,sammary String,row_num String,selectivity String,consistency_flag String,frequency_access String)\n",
+    "STORED AS PARQUET\n",
+    "LOCATION '/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/metadata_tmp.db/sample_metadata';\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#　テーブルができたか確認します\n",
+    "spark.sql(\"show tables in metadata_tmp\").show() "
    ]
   },
   {
@@ -175,8 +244,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Stopは忘れずに\n",
+    "# 忘れてしまうと、いつの間にか接続が溜まっていってしまいます\n",
     "spark.stop()\n",
     "spark.sparkContext.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ビジネスメタデータをSparkテーブル(sample_metadata)に一度保存してみましょう\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
+      "|database_name|table_name     |table_definition                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |sammary                               |selectivity|consistency_flag|frequency_access|\n",
+      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
+      "|             |sample_metadata|CREATE TABLE `metadata_tmp`.`sample_metadata` (\\n  `database_name` STRING,\\n  `table_name` STRING,\\n  `table_definition` STRING,\\n  `sammary` STRING,\\n  `row_num` STRING,\\n  `selectivity` STRING,\\n  `consistency_flag` STRING,\\n  `frequency_access` STRING,\\n  `kenmei` STRING)\\nUSING parquet\\nPARTITIONED BY (kenmei)\\nLOCATION 'file:/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/metadata_tmp.db/sample_metadata'\\nTBLPROPERTIES (\\n  'transient_lastDdlTime' = '1637499359')\\n|一旦テーブルの説明は空にしておきます。|null       |null            |null            |\n",
+      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pyspark.sql.types import LongType, StructType, StructField, StringType, Row\n",
+    "from pyspark.sql.functions import col\n",
+    "from pyspark.sql.functions import when\n",
+    "\n",
+    "# 横着をして Spark経由でテーブル定義を取得します\n",
+    "table_def=spark.sql(\"\"\" show create table metadata_tmp.sample_metadata \"\"\").collect()[0].asDict()['createtab_stmt']\n",
+    "\n",
+    "# カラム名、型、Null OKか否かで設定していきます\n",
+    "struct = StructType([\n",
+    "    StructField(\"database_name\", StringType(), True),\n",
+    "    StructField(\"table_name\", StringType(), True),\n",
+    "    StructField(\"table_definition\", StringType(), True),\n",
+    "    StructField(\"sammary\", StringType(), True),\n",
+    "    StructField(\"row_num\", StringType(), True),\n",
+    "    StructField(\"selectivity\", StringType(), True),\n",
+    "    StructField(\"consistency_flag\", StringType(), True),\n",
+    "    StructField(\"frequency_access\", StringType(), True)\n",
+    "])\n",
+    "\n",
+    "df = spark.createDataFrame([(None,None,None,None,None,None,None)], struct)\n",
+    "#今回は一個づつ値を設定していくので少しトリッキーにデータフレームの値を更新していきマス。\n",
+    "\n",
+    "# メタデータ取得対象の\n",
+    "df2 = df.withColumn(\"database_name\", when(df.database_name.isNull() ,\"\").otherwise(df.database_name))\n",
+    "df2 = df2.withColumn(\"table_name\", when(df.table_name.isNull() ,\"sample_metadata\").otherwise(df.table_name))\n",
+    "df2 = df2.withColumn(\"table_definition\", when(df.table_definition.isNull() ,table_def).otherwise(df.table_definition))\n",
+    "df2 = df2.withColumn(\"sammary\", when(df.sammary.isNull() ,\"一旦テーブルの説明は空にしておきます。\").otherwise(df.sammary))\n",
+    "\n",
+    "df2.show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AnalysisException",
+     "evalue": "`metadata_tmp`.`sample_metadata` requires that the data to be inserted have the same number of columns as the target table: target table has 9 column(s) but the inserted data has 7 column(s), including 0 partition column(s) having constant value(s).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/2q/ffspqcy527ggw9qyccxdymd40000gn/T/ipykernel_57478/693462936.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateOrReplaceTempView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sample\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m spark.sql(\"\"\"\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mInsert\u001b[0m \u001b[0moverwrite\u001b[0m  \u001b[0mtable\u001b[0m \u001b[0mmetadata_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample_metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/pyspark/sql/session.py\u001b[0m in \u001b[0;36msql\u001b[0;34m(self, sqlQuery)\u001b[0m\n\u001b[1;32m    721\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    722\u001b[0m         \"\"\"\n\u001b[0;32m--> 723\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsparkSession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    724\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    725\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtableName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/lib/py4j-0.10.9.2-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1308\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1309\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1310\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1311\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: `metadata_tmp`.`sample_metadata` requires that the data to be inserted have the same number of columns as the target table: target table has 9 column(s) but the inserted data has 7 column(s), including 0 partition column(s) having constant value(s)."
+     ]
+    }
+   ],
+   "source": [
+    "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
+    "df2.createOrReplaceTempView(\"sample\")\n",
+    "\n",
+    "spark.sql(\"\"\"\n",
+    "\n",
+    "Insert overwrite  table metadata_tmp.sample_metadata \n",
+    "\n",
+    "select  * from sample\n",
+    "\n",
+    "\"\"\")\n"
    ]
   }
  ],
