--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -55,7 +55,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# データプロファイリングの結果をテーブルに格納してみよう\n",
+    "# データプロファイリングの結果をMysqlテーブルに格納してみよう\n",
+    "\n",
+    "頑張ればSparkを使って書き込むこともできますが、きれいなPGにはならないのでSparkの機能は使わずにPythonから実行するようにします\n",
+    "\n",
     "\n"
    ]
   },
